# signalwatch-benchlab

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PRESENTATION.md  README.md  SECURITY.md  index.html  plan-veille.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: rapport_de_bug.md
.github/workflows/: ci.yml
.postman/: resources.yaml
benchmark/results/: report-latest.html  report-latest.md
benchmark/results/grpc/: 20260512-signalwatch-final-scenario-a.json  20260512-signalwatch-final-scenario-b.json  20260512-signalwatch-final-scenario-c-concurrency-10.json  20260512-signalwatch-final-scenario-c-concurrency-100.json  20260512-signalwatch-final-scenario-c-concurrency-20.json  20260512-signalwatch-final-scenario-c-concurrency-30.json  20260512-signalwatch-final-scenario-c-concurrency-40.json  20260512-signalwatch-final-scenario-c-concurrency-50.json  20260512-signalwatch-final-seed-create.json  (+28 more)
benchmark/scripts/: report.sh  rest-scenarios.js  run-all.sh  run-grpc.sh  run-rest.sh
common/: Cargo.toml
common/src/: lib.rs  models.rs
docs/: README.md  benchmark-reproduction.md  notes-presentation.md  plan-veille.md  presentation-slides.html
grpc-service/: Cargo.toml  build.rs
grpc-service/src/: lib.rs  main.rs  mapping.rs  service.rs  state.rs
grpc-service/tests/: grpc_crud.rs
postman/environments/: New Environment.environment.yaml  SignalWatch-Dev.environment.yaml
proto/: sensor.proto
rest-service/: Cargo.toml
rest-service/src/: api.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
rest-service/tests/: rest_crud.rs
(+23 files in other folders)
