[package]
name = "grpc-service"
version = "0.1.0"
edition = "2021"
default-run = "grpc-service"

[dependencies]
common = { path = "../common" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
